<resources>
    <string name="app_name">CarsUSB</string>
    <string name="no_internet_connection">You don\'t have internet connection. Please check your internet and try again.</string>
    <string name="dealer_ID">dealer_ID</string>
    <string name="dealer_password">dealer_password</string>
    <string name="dealer_loginButton">dealer_loginButton</string>
    <string name="dealer_forgotpassword">dealer_forgotpassword</string>
    <string name="dealer_signup">dealer_signup</string>
    <string name="details_activity">Car Details</string>
    <string name="Name">Name</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="Mobileno">Mobile No</string>
    <string name="Email">Email Id</string>
    <string name="Pincode">Pincode</string>
    <string name="Email_FP">ENTER YOUR EMAIL</string>
    <string name="Enter_recived_otp">ENTER  YOUR MOBILE NUMBER</string>
    <string name="Dealerid">DEALER ID</string>
    <string name="password">Password</string>
    <string name="login_message">Authenticating your credentials..Please wait..</string>
    <string name="forgot_password_message">Getting your password..Please wait..</string>
    <string name="sign_up_message">Registering you to our database..Please wait..</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="others">Others</string>
    <string name="options">Options</string>
    <string name="activities">Activities</string>
    <string name="dash_board">Dashboard</string>
    <string name="my_account">My Account</string>
    <string name="my_profile">My Profile</string>
    <string name="my_stock">MY Stock</string>
    <string name="Addcar">Add Car</string>
    <string name="settings">Settings</string>
    <string name="Reports">Reports</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Log out</string>
    <string name="share">Share App</string>
    <string name="rate">Rate App</string>
    <string name="help">Help</string>
    <string name="menu_home">Home</string>
    <string name="about_us">About Us</string>
    <string name="about_usdoc">
Carsusb.com is one of India\'s leading online auto marketplace for dealers by providing buyers and sellers a structured platform for transacting in used vehicles. \nOur vision is to expand our offerings across India by forming a strong network of dealers which helps them manage their business operations.
What makes Carsusb.com unique are its offerings and world class technology. Some of the unique features include market place for dealers to add,\n view stock and buy cars from different companies and search desired cars at one go. Additionally, we also provide information related to the automobile industry and the latest automotive news. Our expert views and reviews of exciting upcoming models in the market guide and help dealers update on future business.
We\'re proud of our sincere and continuous efforts to help dealers excel in their businessin India. So whether you\'re a new or existing dealer we hope you\'ll find what you\'re looking for.
Investors and shareholders\n
We are open to business proposal from investors please do contact us for investing in breakthrough technology company.
Our ambition and energy, together we can create great company.\n\n
</string>
    <string name="tandc">Terms &amp; Conditions</string>
    <string name="tandc_doc"></string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="search_car">Advance Search</string>
    <string name="submit">Submit</string>
    <string name="reg_email_id">Please enter your  mobile number to recieve password.</string>
    <string name="enter_otp">Please Enter your Mobile no to get OTP</string>
    <string name="mobile"> Enter Your Mobile Number</string>
    <string name="shortlist">Shortlist</string>
</resources>