<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_marginTop="5dp"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView2"
        android:background="@drawable/carnew"
        />
    <TextView
        android:layout_marginLeft="280dp"
        android:id="@+id/link_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorLink="@color/current_month_bg"
        android:clickable="true"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        android:text="Sign in"
        android:visibility="gone"

        android:textColor="@color/current_month_bg"
        android:textSize="20sp"
        android:onClick="textLinkSignIn" />

    <TextView
        android:id="@+id/dealer_headertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:color="@color/colorAccent"
        android:gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"

        android:text="Dealer Registration"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="italic|bold"


        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_name" />

                <EditText

                    android:id="@+id/dealer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dp"
                    android:ems="10"
                    android:hint="@string/Name"
                    android:inputType="textPersonName"

                    android:textColor="@color/white"
                    android:textColorHint="#CCFFFFFF"
                    android:textSize="18sp"
                    android:theme="@style/EditText_Theme" />
            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_call" />

                <EditText
                    android:id="@+id/dealer_mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dp"

                    android:hint="@string/Mobileno"
                    android:inputType="phone"
                    android:maxLength="10"

                    android:textColor="@color/white"
                    android:textColorHint="#CCFFFFFF"
                    android:textSize="18sp"
                    android:theme="@style/EditText_Theme" />
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_state" />

                <TextView
                    android:id="@+id/select_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dp"
                    android:hint="@string/State"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/white"
                    android:drawableRight="@drawable/ic_dropdown"
                    android:textColorHint="#CCFFFFFF"
                    android:textSize="18sp"
                    android:theme="@style/EditText_Theme" />
            </LinearLayout>

            <View
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="28dp"
                android:background="@color/white" />
            <LinearLayout
                android:layout_marginTop="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_city" />

                <TextView
                    android:id="@+id/select_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/City"
                    android:layout_margin="2dp"
                    android:drawableRight="@drawable/ic_dropdown"
                    android:paddingRight="10dp"
                    android:paddingTop="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="#CCFFFFFF"
                    android:textSize="18sp"
                    android:theme="@style/EditText_Theme" />
            </LinearLayout>

            <View
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="28dp"
                android:background="@color/white" />
            <LinearLayout
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_pincode" />

                <EditText
                    android:id="@+id/dealer_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dp"
                    android:hint="@string/Pincode"

                    android:inputType="number"
                    android:maxLength="6"

                    android:textColor="@color/white"

                    android:textColorHint="#CCFFFFFF"
                    android:textSize="18sp"
                    android:theme="@style/EditText_Theme" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/dealer_emailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dp"

                    android:hint="@string/Email"

                    android:inputType="textEmailAddress"

                    android:textColor="@color/white"


                    android:textColorHint="#CCFFFFFF"
                    android:textSize="18sp"
                    android:theme="@style/EditText_Theme" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/linearLayout1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:layout_gravity="center_vertical"
                    android:text="I have read and agree to the"

                    android:textSize="12sp"
                    />
                <TextView
                    android:layout_marginLeft="2dp"
                    android:id="@+id/checkbox_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorLink="@color/current_month_bg"
                    android:clickable="true"
                    android:layout_gravity="center_vertical"
                    android:text="Terms and conditions"
                    android:textColor="@color/current_month_bg"
                    android:textSize="15sp"
                    android:onClick="termsOnclick" />

            </LinearLayout>
        </LinearLayout>


        <Button

            android:id="@+id/dealer_SiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mybutton"
            android:onClick="signUpButtonOnClick"
            android:text="Sign up"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18dp" />


        />


    </LinearLayout>
</ScrollView>
</LinearLayout>